Fixed arrow on mobile

--- a/_sass/_animations.scss
+++ b/_sass/_animations.scss
@@ -18,7 +18,7 @@
   position: absolute;
   margin-left: auto;
  	margin-right: auto;
-  bottom: 0;
+  bottom: 25px;
   left: 0;
   right: 0;
   z-index: 99;
